Fix navbar horizontal scroller issue

--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,6 @@
 }
 
 body {
-  min-width: 350px;
   background: var(--color-bg);
 }
 
@@ -14,5 +13,4 @@ a, ul, li {
   color: var(--color-text-2);
   text-decoration: none;
   list-style-type: none;
-  
 }
